--- a/angular/test.html
+++ b/angular/test.html
@@ -11,7 +11,9 @@
 
 		// Paste in the test code here.
 		describe('calculator', function() {
-			it('1+2 should equal 3');
+			it('1+2 should equal 3', function() {
+				expect(1 + 2).toBe(31);
+			});
 		});
 
 	</script>
